--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           # Set registry to NPM instead of github packages for publication
           registry-url: 'https://registry.npmjs.org'
-          node-version: 14
+          node-version: 16
 
       - name: Setup Linux Dependencies
         if: startsWith(matrix.os, 'ubuntu')
@@ -52,8 +52,8 @@ jobs:
           ARCH: ${{ matrix.arch }}
           GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish NPM Package
-        if: startsWith(github.ref, 'refs/tags/v') && startsWith(matrix.os, 'ubuntu')
-        run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+      # - name: Publish NPM Package
+      #   if: startsWith(github.ref, 'refs/tags/v') && startsWith(matrix.os, 'ubuntu')
+      #   run: npm publish --access public
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
